--- a/index.html
+++ b/index.html
@@ -41,11 +41,7 @@
     <img class="d-block mx-auto mb-4" src="logo.png" alt="" width="18%" height="18%">
     <h1 class="display-5 fw-bold text-body-emphasis"><span class="auto-type">WELCOME TO NIGHTMARE SMP</span></h1>
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id quasi consequuntur accusantium
-        ipsum vitae laborum ipsam blanditiis quam? Necessitatibus ab sunt nesciunt vitae praesentium, fuga nam ratione
-        atque consequatur molestiae, quae perspiciatis veniam ipsa accusamus ad, reiciendis voluptatibus iste. Pariatur
-        error fuga quia labore nihil sunt suscipit rem perspiciatis libero consectetur explicabo, minima commodi
-        voluptates</p>
+      <p class="lead mb-4">Welcome to The Nightmare Server! Step into a thrilling 24/7 Minecraft adventure, where our diverse game modes promise endless excitement. Our friendly community and helpful staff are here to make your experience unforgettable. Explore, create, and connect with like-minded players in this digital playground of possibilities. Embrace the night and join us on this epic journey through the wonders of Minecraft!</p>
     </div>
   </div>
   <hr>
@@ -57,9 +53,7 @@
       </div>
       <div class="col-lg-6">
         <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">THE BEST COMMUNITY SERVER</h1>
-        <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, accusantium aliquam illum
-          porro possimus animi harum tempora a velit esse dolore aspernatur labore sapiente. Architecto a, ipsa quos
-          vitae quia molestias possimus qui velit maiores ex, totam itaque accusantium consequuntur.</p>
+        <p class="lead"The Nightmare Server is a welcoming Minecraft community known for its friendly atmosphere and diverse gameplay. With a 24/7 network, players can enjoy various exciting game modes. Our dedicated staff ensures a safe and enjoyable experience for all. Join us now for an unforgettable journey through the world of Minecraft!</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
           <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
           <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
