--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="col-lg-6">
         <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">THE BEST COMMUNITY SERVER</h1>
-        <p class="lead"The Nightmare Server is a welcoming Minecraft community known for its friendly atmosphere and diverse gameplay. With a 24/7 network, players can enjoy various exciting game modes. Our dedicated staff ensures a safe and enjoyable experience for all. Join us now for an unforgettable journey through the world of Minecraft!</p>
+        <p class="lead">The Nightmare Server is a welcoming Minecraft community known for its friendly atmosphere and diverse gameplay. With a 24/7 network, players can enjoy various exciting game modes. Our dedicated staff ensures a safe and enjoyable experience for all. Join us now for an unforgettable journey through the world of Minecraft!</p>
         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
           <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button>
           <button type="button" class="btn btn-outline-secondary btn-lg px-4">Default</button>
