--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
             Skywars, all for free! This is for both Pocket and Java Edition! Its founder is Armaan, And owner also. There are 2 more owners... <hr>
             NicoRuizDev: A Highly Skilled Node.js developer. <br> <a href="https://github.com/NicoRuizDev" class="text-center">HIS GITHUB PAGE</a><br>
             Mr. Gardian: Overseeing and directing the overall operations of our Discord Server. <br> <a href="https://discord.gg/fNdX8mFEeh">OUR DISCORD SERVER LINK</a><hr>
-            Nightmare SMP was first started on 25/07/2023,
+            Nightmare SMP was first founded on 30/04/2022,
             and now Nightmare SMP has become India’s biggest server. And it is in the first position in the list of
             servers in
             India.
@@ -56,11 +56,11 @@
             IP & PORT
             <br><br>
             Minecraft Java Edition: <br>
-            🔹 IP: thenightmaremc.mc-world.net <br><br>
+            🔹 IP:  nightmaresmp.alactic.net <br><br>
 
             Minecraft Pocket Edition (PE): <br>
-            🔹 IP: thenightmaremc.mc-world.net <br>
-            🔹 Port: 8528
+            🔹 IP:  nightmaresmp.alactic.net <br>
+            🔹 Port: 8706
         </h3>
     </div>
     <div class="container" style="opacity: 0.8; background-color: black; border-radius: 15px; margin: 2%;">
