--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
     <div class="p-5 text-center" style="border-radius: 15px;">
       <h1 class="text-body-emphasis">SERVER IP & PORT</h1>
       <h3>Minecraft Java Edition:</h3>
-      <p><b>🔹 IP: nightmaresmp.alactic.net</b></p>
+      <p><b>🔹 IP: nightmaremc.alactic.net</b></p>
 
       <h3>Minecraft Pocket Edition (PE):</h3>
       <p><b>🔹 IP: nightmaresmp.alactic.net</b></p>
-      <p><b>🔹 Port: 8706</b></p>
+      <p><b>🔹 Port: 8528</b></p>
     </div>
   </div>
   <hr>
