--- a/about.html
+++ b/about.html
@@ -56,11 +56,11 @@
             IP & PORT
             <br><br>
             Minecraft Java Edition: <br>
-            🔹 IP:  nightmaresmp.alactic.net <br><br>
+            🔹 IP:  nightmaremc.alactic.net <br><br>
 
             Minecraft Pocket Edition (PE): <br>
-            🔹 IP:  nightmaresmp.alactic.net <br>
-            🔹 Port: 8706
+            🔹 IP:  nightmaremc.alactic.net <br>
+            🔹 Port: 8528
         </h3>
     </div>
     <div class="container" style="opacity: 0.8; background-color: black; border-radius: 15px; margin: 2%;">
