--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="dark light">
-    <title>Nightmare SMP</title>
+    <title>Nightmare MC</title>
     <link rel="shortcut icon" href="logo.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -40,10 +40,10 @@
     <div class="mx-auto">
         <h1 class="text-body-emphasis text-center py-3"
             style="margin-left:300px; margin-right:300px; background-color: black; opacity: 0.8; border-radius: 15px;"><b>— About Nightmare
-                SMP —</b></h1>
+                MC —</b></h1>
         <h3 class="text-body-emphasis text-center py-3"
             style="margin-left:300px; margin-right:300px; background-color: black; opacity: 0.8; line-height: 200%; border-radius: 15px;">
-            Nightmare SMP will be
+           Nightmare MC will be
             India’s best and biggest Minecraft server one day where you can enjoy Oneblock, PVP, Bedwars, and
             Skywars, all for free! This is for both Pocket and Java Edition! Its founder is Armaan, And owner also. There are 2 more owners... <hr>
             NicoRuizDev: A Highly Skilled Node.js developer. <br> <a href="https://github.com/NicoRuizDev" class="text-center">HIS GITHUB PAGE</a><br>
