--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <br>
           <br>
           <br>
-          <h4 class="card-title"><b>BEDWARS</b></h4>
+          <h4 class="card-title"><b>BEDWARS (discontinued)</b></h4>
         </div>
       </div>
       <div class="card bg-dark text-white w-25 me-2 text-center">
@@ -90,7 +90,7 @@
           <br>
           <br>
           <br>
-          <h4 class="card-title"><b>SKYWARS</b></h4>
+          <h4 class="card-title"><b>SKYWARS (discontinued)</b></h4>
         </div>
       </div>
     </div>
@@ -105,11 +105,11 @@
     <div class="p-5 text-center" style="border-radius: 15px;">
       <h1 class="text-body-emphasis">SERVER IP & PORT</h1>
       <h3>Minecraft Java Edition:</h3>
-      <p><b>🔹 IP: nightmaremc.alactic.net</b></p>
+      <p><b>🔹 IP: as1.serverdeploy.pro:25006</b></p>
 
       <h3>Minecraft Pocket Edition (PE):</h3>
-      <p><b>🔹 IP: nightmaresmp.alactic.net</b></p>
-      <p><b>🔹 Port: 8528</b></p>
+      <p><b>🔹 IP: as1.serverdeploy.pro</b></p>
+      <p><b>🔹 Port: 25006</b></p>
     </div>
   </div>
   <hr>
